# embree4-rs

./: Cargo.toml  LICENSE  README.md
examples/: par_intersect.rs  triangle_mesh.rs  user_geom.rs
src/: device.rs  lib.rs  scene.rs
src/geometry/: mod.rs  tri_mesh.rs  user.rs
