[package]
name = "embree4-rs"
version = "0.0.5"
edition = "2021"
description = "High-level wrapper for Intel's Embree 4 high-performance ray tracing library."
keywords = ["intel", "embree", "ray", "tracing", "bvh"]
categories = ["api-bindings", "graphics", "rendering", "multimedia"]
repository = "https://github.com/psytrx/embree4-rs/"
documentation = "https://docs.rs/embree4-rs/"
license-file = "LICENSE"

exclude = [".gitignore"]

[dev-dependencies]
glam = "0.24.2"

[dependencies]
anyhow = "1.0.75"
embree4-sys = "0.0.7"
